--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
           </nav>
           <ul class="header-contacts">
             <li class="item header-mail">
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="header-mail-set" href="mailto:info@devstudio.com">
+                <svg class="header-mail-icon">
+                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                </svg>info@devstudio.com</a>
             </li>
             <li class="item header-phone">
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="header-phone-set" href="tel:+380961111111">
+                <svg class="header-phone-icon">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a>
             </li>
           </ul>
       </div>
@@ -51,7 +57,12 @@
         <div class="container">
           <ul class="menu all-about">
             <li class="item">
-              <h3>Внимание к деталям</h3>
+              <div class="item-icon">
+                <svg class="item-icon-svg">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
+              <h3 class="item-text">Внимание к деталям</h3>
               <p class="about">
                 Идейные соображения, а также <br />
                 начало повседневной работы по <br />
@@ -59,7 +70,12 @@
               </p>
             </li>
             <li class="item">
-              <h3>Пунктуальность</h3>
+              <div class="item-icon">
+                <svg class="item-icon-svg">
+                  <use href="./images/symbol-defs.svg#icon-clock1"></use>
+                </svg>
+              </div>
+              <h3 class="item-text">Пунктуальность</h3>
               <p class="about">
                 Задача организации, в особенности <br />
                 же рамки и место обучения кадров <br />
@@ -67,7 +83,12 @@
               </p>
             </li>
             <li class="item">
-              <h3>Планирование</h3>
+              <div class="item-icon">
+                <svg class="item-icon-svg">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
+              <h3 class="item-text">Планирование</h3>
               <p class="about">
                 Равным образом консультация с <br />
                 широким активом в значительной <br />
@@ -75,7 +96,12 @@
               </p>
             </li>
             <li class="item">
-              <h3>Современные технологии</h3>
+              <div class="item-icon">
+                <svg class="item-icon-svg">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+              <h3 class="item-text">Современные технологии</h3>
               <p class="about">
                 Значимость этих проблем настолько <br />
                 очевидна, что реализация плановых <br />
@@ -110,6 +136,36 @@
                 <div class="team-text">
                   <h3 class="team-employee">Игорь Демьяненко</h3>
                   <p class="team-position">Product Designer</p>
+                  <ul class="icons-list">
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="item team">
@@ -117,6 +173,36 @@
                 <div class="team-text">
                   <h3 class="team-employee">Ольга Репина</h3>
                   <p class="team-position">Frontend Developer</p>
+                  <ul class="icons-list">
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="item team">
@@ -124,6 +210,36 @@
                 <div class="team-text">
                   <h3 class="team-employee">Николай Тарасов</h3>
                   <p class="team-position">Marketing</p>
+                  <ul class="icons-list">
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="item team">
@@ -131,37 +247,151 @@
                 <div class="team-text">
                   <h3 class="team-employee">Михаил Ермаков</h3>
                   <p class="team-position">UI Designer</p>
+                  <ul class="icons-list">
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="item">
+                      <a class="links-list" href="">
+                        <svg class="icon" width="20px" height="20px">
+                          <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
             </ul>
           </div>
       </section>
-    </main>
-    <footer class="footer-sections">
-      <div class="container">
-        <a class="webstudio white" href="./index.html"
-          ><span class="txt-bl">Web</span>Studio</a>
-        <address>
-          <ul class="footer-all">
-            <li>
-              <a
-                class="map link footer-adress"
-                href="https://bit.ly/3ffIdBp"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a>
+      <section class="clients-sections">
+        <div class="container">
+          <h2 class="clients-text">Постоянные клиенты</h2>
+          <ul class="clients-set">
+            <li class="item">
+              <a class="clients-logo" >
+                <svg width:="41" height:="46.7">
+                  <use href="./images/symbol-defs.svg#icon-client1"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a href="mailto:info@example.com" class="footer-mail">info@example.com</a
-              >
+            <li class="item">
+              <a class="clients-logo" >
+                <svg width:="40" height:="52">
+                  <use href="./images/symbol-defs.svg#icon-client2"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a href="tel:+380961111111" class="footer-phone">+38 096 111 11 11</a
-              >
+            <li class="item">
+              <a class="clients-logo" >
+                <svg width:="43.46" height:="41.18">
+                  <use href="./images/symbol-defs.svg#icon-client3svg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="clients-logo" >
+                <svg width:="84.44" height:="40.62">
+                  <use href="./images/symbol-defs.svg#icon-client4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="clients-logo" >
+                <svg width:="62.64" height:="45.43">
+                  <use href="./images/symbol-defs.svg#icon-client5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="clients-logo" >
+                <svg width:="93.79" height:="46.7">
+                  <use href="./images/symbol-defs.svg#icon-client6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-      </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer-sections">  
+      <div class="container">
+          <div class="container-adress">
+          <a class="webstudio white" href="./index.html"
+            ><span class="txt-bl">Web</span>Studio</a>
+          <address>
+            <ul class="footer-all">
+              <li>
+                <a
+                  class="map link footer-adress"
+                  href="https://bit.ly/3ffIdBp"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a>
+              </li>
+              <li>
+                <a href="mailto:info@example.com" class="footer-mail">info@example.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="footer-phone">+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+          </div>
+          <div class="connections">
+            <h2 class="connections-text">присоединяйтесь</h2>
+            <ul class="connections-set">
+              <li class="item">
+                <a class="connections-set-icon">
+                  <svg class="connections-icon">
+                    <use href="./images/symbol-defs.svg#icon-instagram_footer"></use>       
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a class="connections-set-icon">
+                  <svg class="connections-icon">
+                    <use href="./images/symbol-defs.svg#icon-twitter_footer"></use>       
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a class="connections-set-icon">
+                  <svg class="connections-icon">
+                    <use href="./images/symbol-defs.svg#icon-facebook_footer"></use>       
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a class="connections-set-icon">
+                  <svg class="connections-icon">
+                    <use href="./images/symbol-defs.svg#icon-linkedin_footer"></use>       
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+    </div>
     </footer>
   </body>
 </html>
