--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
           <ul class="header-contacts">
             <li class="item header-mail">
               <a class="header-mail-set" href="mailto:info@devstudio.com">
-                <svg class="header-mail-icon">
+                <svg class="header-mail-icon" width= "16" height= "12">
                   <use href="./images/symbol-defs.svg#icon-envelope"></use>
                 </svg>info@devstudio.com</a>
             </li>
             <li class="item header-phone">
               <a class="header-phone-set" href="tel:+380961111111">
-                <svg class="header-phone-icon">
+                <svg class="header-phone-icon" width= "10" height= "16">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>+38 096 111 11 11</a>
             </li>
@@ -288,42 +288,42 @@
           <ul class="clients-set">
             <li class="item">
               <a class="clients-logo" >
-                <svg width:="41" height:="46.7">
+                <svg width="41" height="46.7">
                   <use href="./images/symbol-defs.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="clients-logo" >
-                <svg width:="40" height:="52">
+                <svg width="40" height="52">
                   <use href="./images/symbol-defs.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="clients-logo" >
-                <svg width:="43.46" height:="41.18">
+                <svg width="43.46" height="41.18">
                   <use href="./images/symbol-defs.svg#icon-client3svg"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="clients-logo" >
-                <svg width:="84.44" height:="40.62">
+                <svg width="84.44" height="40.62">
                   <use href="./images/symbol-defs.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="clients-logo" >
-                <svg width:="62.64" height:="45.43">
+                <svg width="62.64" height="45.43">
                   <use href="./images/symbol-defs.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="clients-logo" >
-                <svg width:="93.79" height:="46.7">
+                <svg width="93.79" height="46.7">
                   <use href="./images/symbol-defs.svg#icon-client6"></use>
                 </svg>
               </a>
