--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <li class="item">
               <a class="clients-logo" >
                 <svg width="43.46" height="41.18">
-                  <use href="./images/symbol-defs.svg#icon-client3svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
