--- a/portfolio.html
+++ b/portfolio.html
@@ -14,31 +14,35 @@
   </head>
   <body>
     <header class="header-sections">
-      <div class="container">
-        <div class="header-container">
+      <div class="container header-container">
         <nav class="main-nav">
           <a class="webstudio" href="./index.html"
             ><span class="txt-bl">Web</span>Studio</a
           >
           <ul class="all-header">
             <li class="item header-link">
-              <a href="./index.html">Студия</a>
+              <a href="./index.html" class="current" >Студия</a>
             </li>
             <li class="item header-link">
-              <a href="./portfolio.html" class="current" >Портфолио</a>
+              <a href="./portfolio.html">Портфолио</a>
             </li>
             <li class="item header-link"><a href="">Контакты</a></li>
           </ul>
           </nav>
           <ul class="header-contacts">
             <li class="item header-mail">
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="header-mail-set" href="mailto:info@devstudio.com">
+                <svg class="header-mail-icon" width= "16" height= "12">
+                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                </svg>info@devstudio.com</a>
             </li>
             <li class="item header-phone">
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="header-phone-set" href="tel:+380961111111">
+                <svg class="header-phone-icon" width= "10" height= "16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a>
             </li>
           </ul>
-        </div>
       </div>
     </header>
     <main>
