--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
           </ul>
           <ul class="card-set">
             <li class="item-port">
-              <a href="">
+              <a href="" class="item-port-card">
                 <div class="card-thumb">
                   <img src="./images/teсhno.jpg" alt="teсhno" />
                 </div>
@@ -78,7 +78,7 @@
               </a>
             </li>
             <li class="item-port">
-              <a href="">
+              <a href="" class="item-port-card">
                 <div class="card-thumb">
                   <img class="item-port-img" src="./images/poster.jpg" alt="poster" />
                 </div>
@@ -89,7 +89,7 @@
               </a>
             </li>
             <li class="item-port">
-              <a href="">
+              <a href="" class="item-port-card">
                 <div class="card-thumb">
                   <img class="item-port-img" src="./images/seafood.jpg" alt="seafood" />
                 </div>
@@ -100,7 +100,7 @@
               </a>
             </li>
             <li class="item-port">
-              <a href="">
+              <a href="" class="item-port-card">
                 <div class="card-thumb">
                   <img class="item-port-img" src="./images/prime.jpg" alt="prime" />
                 </div>
@@ -111,7 +111,7 @@
               </a>
             </li>
             <li class="item-port">
-              <a href="">
+              <a href="" class="item-port-card">
                 <div class="card-thumb">
                   <img class="item-port-img" src="./images/boxes.jpg" alt="boxes" />
                 </div>
@@ -122,7 +122,7 @@
               </a>
             </li>
             <li class="item-port">
-              <a href="">
+              <a href="" class="item-port-card">
                 <div class="card-thumb">
                   <img class="item-port-img" src="./images/inspiration.jpg" alt="inspiration" />
                 </div>
@@ -133,7 +133,7 @@
               </a>
             </li>
             <li class="item-port">
-              <a href="">
+              <a href="" class="item-port-card">
                 <div class="card-thumb">
                   <img class="item-port-img" src="./images/limited.jpg" alt="limited" />
                 </div>
@@ -144,7 +144,7 @@
               </a>
             </li>
             <li class="item-port">
-              <a href="">
+              <a href="" class="item-port-card">
                 <div class="card-thumb">
                   <img class="item-port-img" src="./images/lab.jpg" alt="lab" />
                 </div>
@@ -155,7 +155,7 @@
               </a>
             </li>
             <li class="item-port">
-              <a href="">
+              <a href="" class="item-port-card">
                 <div class="card-thumb">
                   <img class="item-port-img" src="./images/growing.jpg" alt="growing" />
                 </div>
@@ -169,7 +169,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer-sections">
+    <footer class="footer-sections">  
       <div class="container">
           <div class="container-adress">
           <a class="webstudio white" href="./index.html"
@@ -199,28 +199,28 @@
             <h2 class="connections-text">присоединяйтесь</h2>
             <ul class="connections-set">
               <li class="item">
-                <a class="connections-set-icon">
+                <a href="" class="connections-set-icon">
                   <svg class="connections-icon">
                     <use href="./images/symbol-defs.svg#icon-instagram_footer"></use>       
                   </svg>
                 </a>
               </li>
               <li class="item">
-                <a class="connections-set-icon">
+                <a href="" class="connections-set-icon">
                   <svg class="connections-icon">
                     <use href="./images/symbol-defs.svg#icon-twitter_footer"></use>       
                   </svg>
                 </a>
               </li>
               <li class="item">
-                <a class="connections-set-icon">
+                <a href="" class="connections-set-icon">
                   <svg class="connections-icon">
                     <use href="./images/symbol-defs.svg#icon-facebook_footer"></use>       
                   </svg>
                 </a>
               </li>
               <li class="item">
-                <a class="connections-set-icon">
+                <a href="" class="connections-set-icon">
                   <svg class="connections-icon">
                     <use href="./images/symbol-defs.svg#icon-linkedin_footer"></use>       
                   </svg>
