--- a/index.html
+++ b/index.html
@@ -287,42 +287,42 @@
           <h2 class="clients-text">Постоянные клиенты</h2>
           <ul class="clients-set">
             <li class="item">
-              <a class="clients-logo" >
+              <a href="" class="clients-logo" >
                 <svg width="41" height="46.7">
                   <use href="./images/symbol-defs.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="clients-logo" >
+              <a href="" class="clients-logo" >
                 <svg width="40" height="52">
                   <use href="./images/symbol-defs.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="clients-logo" >
+              <a href="" class="clients-logo" >
                 <svg width="43.46" height="41.18">
                   <use href="./images/symbol-defs.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="clients-logo" >
+              <a href="" class="clients-logo" >
                 <svg width="84.44" height="40.62">
                   <use href="./images/symbol-defs.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="clients-logo" >
+              <a href="" class="clients-logo" >
                 <svg width="62.64" height="45.43">
                   <use href="./images/symbol-defs.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="clients-logo" >
+              <a href="" class="clients-logo" >
                 <svg width="93.79" height="46.7">
                   <use href="./images/symbol-defs.svg#icon-client6"></use>
                 </svg>
@@ -362,28 +362,28 @@
             <h2 class="connections-text">присоединяйтесь</h2>
             <ul class="connections-set">
               <li class="item">
-                <a class="connections-set-icon">
+                <a href="" class="connections-set-icon">
                   <svg class="connections-icon">
                     <use href="./images/symbol-defs.svg#icon-instagram_footer"></use>       
                   </svg>
                 </a>
               </li>
               <li class="item">
-                <a class="connections-set-icon">
+                <a href="" class="connections-set-icon">
                   <svg class="connections-icon">
                     <use href="./images/symbol-defs.svg#icon-twitter_footer"></use>       
                   </svg>
                 </a>
               </li>
               <li class="item">
-                <a class="connections-set-icon">
+                <a href="" class="connections-set-icon">
                   <svg class="connections-icon">
                     <use href="./images/symbol-defs.svg#icon-facebook_footer"></use>       
                   </svg>
                 </a>
               </li>
               <li class="item">
-                <a class="connections-set-icon">
+                <a href="" class="connections-set-icon">
                   <svg class="connections-icon">
                     <use href="./images/symbol-defs.svg#icon-linkedin_footer"></use>       
                   </svg>
