--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
           >
           <ul class="all-header">
             <li class="item header-link">
-              <a href="./index.html" class="current" >Студия</a>
+              <a href="./index.html">Студия</a>
             </li>
             <li class="item header-link">
-              <a href="./portfolio.html">Портфолио</a>
+              <a href="./portfolio.html"  class="current" >Портфолио</a>
             </li>
             <li class="item header-link"><a href="">Контакты</a></li>
           </ul>
